# zipcomic

./: .gitignore  Cargo.toml  dl - Copie.py  dl(old).py  dl(userscript).html  dl(userscript).js  dl.py  index.html  readme.md  specs.json  style.css
params/: chapmanganato.com.json  default.json  france-manga.org.json  kaijimanga.com.json  mangakakalot.com.json  mangakakalot.is.json  mangakakalot.to.json  mangakakalot.tv.json  mangascan.ws.json  oyasumipunpun.com.json  sushiscan.net.json
src/: fantoccini_tools.rs  main.rs  progress.rs  selection.rs
