[package]
name = "mandl"
version = "0.1.0"
authors = ["Vuktur <vuktur@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
#colored = "2.0"
url = "2.5.4"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
scraper = "0.23.1"
fantoccini = "0.21.5"
tokio-stream = "0.1.17"
once_cell = "1.21.3"
genpdf = "0.2.0"
serde-inline-default = "0"
